force-app/main/default/objects/CommercientSF__GenMaster__c/CommercientSF__GenMaster__c.object-meta.xml
<CustomObject>
    <label>Syspro General Ledger Master</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro General Ledger Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>