force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__AccOnHldFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AccOnHldFlag__c</fullName>
    <description>AccOnHldFlag</description>
    <label>AccOnHldFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>