force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__AccountType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AccountType__c</fullName>
    <description>AccountType</description>
    <label>AccountType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>