force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__AltCurIndicator__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AltCurIndicator__c</fullName>
    <description>AltCurIndicator</description>
    <label>AltCurIndicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>