force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__AltDescription__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AltDescription__c</fullName>
    <description>AltDescription</description>
    <label>AltDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>