force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__AnalysisCategory__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AnalysisCategory__c</fullName>
    <description>AnalysisCategory</description>
    <label>AnalysisCategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>