force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__AnalysisRequired__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AnalysisRequired__c</fullName>
    <description>AnalysisRequired</description>
    <label>AnalysisRequired</label>
    <length>255</length>
    <type>Text</type>
</CustomField>