force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__BudgetMethod__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BudgetMethod__c</fullName>
    <description>BudgetMethod</description>
    <label>BudgetMethod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>