force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__BusinessProcess10__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BusinessProcess10__c</fullName>
    <description>BusinessProcess10</description>
    <label>BusinessProcess10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>