force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__BusinessProcess1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BusinessProcess1__c</fullName>
    <description>BusinessProcess1</description>
    <label>BusinessProcess1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>