force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__BusinessProcess2__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BusinessProcess2__c</fullName>
    <description>BusinessProcess2</description>
    <label>BusinessProcess2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>