force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__ControlAccFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ControlAccFlag__c</fullName>
    <description>ControlAccFlag</description>
    <label>ControlAccFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>