force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__CurrentInd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CurrentInd__c</fullName>
    <description>CurrentInd</description>
    <label>CurrentInd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>