force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__Description__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Description__c</fullName>
    <description>Description</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>