force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__ExpenseType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ExpenseType__c</fullName>
    <description>ExpenseType</description>
    <label>ExpenseType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>