force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__GlGroup__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GlGroup__c</fullName>
    <description>GlGroup</description>
    <label>GlGroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>