force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__GlUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GlUnitOfMeasure__c</fullName>
    <description>GlUnitOfMeasure</description>
    <label>GlUnitOfMeasure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>