force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__Historical__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Historical__c</fullName>
    <description>Historical</description>
    <label>Historical</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>