force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__IntegrationMethod__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__IntegrationMethod__c</fullName>
    <description>IntegrationMethod</description>
    <label>IntegrationMethod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>