force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__InterestAccount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InterestAccount__c</fullName>
    <description>InterestAccount</description>
    <label>InterestAccount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>