force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__NextGlLine__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NextGlLine__c</fullName>
    <description>NextGlLine</description>
    <label>NextGlLine</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>