force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__NextGlLinePyr__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NextGlLinePyr__c</fullName>
    <description>NextGlLinePyr</description>
    <label>NextGlLinePyr</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>