force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__NextLine__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NextLine__c</fullName>
    <description>NextLine</description>
    <label>NextLine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>