force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__NextLinePyr__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NextLinePyr__c</fullName>
    <description>NextLinePyr</description>
    <label>NextLinePyr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>