force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__NumDetailCurYr__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NumDetailCurYr__c</fullName>
    <description>NumDetailCurYr</description>
    <label>NumDetailCurYr</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>