force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__NumDetailPrvYr__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NumDetailPrvYr__c</fullName>
    <description>NumDetailPrvYr</description>
    <label>NumDetailPrvYr</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>