force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__PrevPerEndBal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PrevPerEndBal__c</fullName>
    <description>PrevPerEndBal</description>
    <label>PrevPerEndBal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>