force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__PtdCrValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PtdCrValue__c</fullName>
    <description>PtdCrValue</description>
    <label>PtdCrValue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>