force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__PtdDrValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PtdDrValue__c</fullName>
    <description>PtdDrValue</description>
    <label>PtdDrValue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>