force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__ReportIndex1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ReportIndex1__c</fullName>
    <description>ReportIndex1</description>
    <label>ReportIndex1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>