force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__ReportIndex2__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ReportIndex2__c</fullName>
    <description>ReportIndex2</description>
    <label>ReportIndex2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>