force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__RetEarnsAccount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__RetEarnsAccount__c</fullName>
    <description>RetEarnsAccount</description>
    <label>RetEarnsAccount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>