force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__RevalCategory__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__RevalCategory__c</fullName>
    <description>RevalCategory</description>
    <label>RevalCategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>