force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__Tax2Code__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Tax2Code__c</fullName>
    <description>Tax2Code</description>
    <label>Tax2Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>