force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__TaxAccount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxAccount__c</fullName>
    <description>TaxAccount</description>
    <label>TaxAccount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>