force-app/main/default/objects/CommercientSF__GenMaster__c/fields/CommercientSF__TaxCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxCode__c</fullName>
    <description>TaxCode</description>
    <label>TaxCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>